# meeting-minutes

./: .gitignore  BUILD_COMPLETE_GEMINI_INTEGRATION.md  CHANGELOG.md  Cargo.toml  EXTERNAL_MODELS_AND_AUTH_SETUP.md  FALLBACK_SYSTEM_SUMMARY.md  GEMINI_AUTO_UPDATE_GUIDE.md  GEMINI_FOR_SPEAKER_IDENTIFICATION.md  MEETILY_OPTIMAL_SETTINGS_GUIDE.md  PARAKEET_TUNING_GUIDE.md  PROJECT_STATUS_REPORT.md  QUICK_OPTIMIZATION_REFERENCE.md  README.md  SPEAKER_DIARIZATION_DEPLOYMENT.md  SPEAKER_DIARIZATION_TESTING_GUIDE.md  TIMESTAMP_FEATURE_SUMMARY.md  TRANSCRIPTION_TUNING_GUIDE.md  WHY_GEMINI_CANNOT_DO_SPEAKER_SEGMENTATION.md  auto_update_gemini.sh  setup_gemini.md  switch_to_gemini.sh  test_fallback_system.py  test_gemini  test_quota_exhaustion.py  verify_build.sh  verify_gemini_integration.sh
.kiro/specs/meetily-gap-analysis-improvement/: design.md  requirements.md  tasks.md
.kiro/specs/meetily-memory-optimization/: design.md  requirements.md  tasks.md
.kiro/specs/meetily-mp4-recording-fix/: COMPLETION_SUMMARY.md  design.md  requirements.md  tasks.md
docs/: BUILD_AND_DEPLOYMENT_GUIDE.md  CONFIGURATION_EXAMPLES.md  INSTALLATION_TROUBLESHOOTING.md  LINUX_INSTALLATION_GUIDE.md  OLLAMA_INTEGRATION_GUIDE.md
frontend/: package.json
frontend/src-tauri/: Cargo.toml  TEST_VALIDATION_REPORT.md  tauri.conf.json
frontend/src-tauri/examples/: parameter_tracing_demo.rs  run_diagnostics.rs
proptest-regressions/property_tests/: installation_guide_completeness.txt
tests/: Cargo.toml  lib.rs
tests/property_tests/: installation_guide_completeness.rs  mod.rs
(+88 files in other folders)
